2002-06-17  Yanko Kaneti  <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-12  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:

	Change binary name to gnome-sound-recorder
	
2002-06-12  Jakub Steiner <jimmac@ximian.com>

	* icons/gnome-application-x-abiword.png: forgot to update this
	  one too

2002-06-12  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Release 2.0.0.

2002-06-11  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in:

	Don't use ogg123 for OGG files, prefer xmms & freeamp.

2002-06-06  Rajeev Karale <rajeev.karale@wipro.com>

	* icons/Makefile.am : Bigfix #84350. Fix for document-icons not 
	  getting installed properly. 

2002-06-03  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.keys.in : Doh! the category should be 'Images' not 'Image'

2002-05-31  Alex Graveley  <alex@ximian.com>

	* gnome-vfs.mime: Add image/x-emf, image/x-pcx, image/x-photo-cd,
	image/x-pict mimetypes.

	* gnome-vfs.applications: Add openoffice application, add new
	mimetypes as supported by staroffice.

	* gnome-vfs.keys.in: Add openoffice as a supported application
	wherever staroffice is used.  Add staroffice/openoffice
	application handlers for added mime types.

2002-05-31  Jakub Steiner <jimmac@ximian.com>

	* icons/i-dvd.png: we can't use the DVD logo I was told. 
	* icons/gnome-text-abiword.png: don't use the app icon for abi
     files
	* icons/gnome-text-x-lyx.png: LyX files

Thu May 30 09:32:41 2002  George Lebl <jirka@5z.com>

	* gnome-vfs.keys.in: add x-directory/vfolder-desktop

2002-05-29  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.keys.in : Add more categories.

2002-05-24  Alex Graveley  <alex@ximian.com>

	* gnome-vfs-mime-magic: Move audio/x-wav matchers above
	audio/x-riff, as wav files start with RIFF, and were being wrongly
	identified as audio/x-riff.

2002-05-23  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.mime:
